<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Track Work Time</string>
    <string name="yes">Yes</string>
    <string name="no">No</string> 
    <string name="website">http://www.zephyrsoft.org</string>
    <string name="email">android@zephyrsoft.org</string>
    <string name="in">IN</string>
    <string name="onespace">" "</string>
    <string name="out">OUT</string>
    <string name="worked">Worked</string>
    <string name="flexi">Flexi</string>
    <string name="monday">Mo, </string>
    <string name="tuesday">Tu, </string>
    <string name="wednesday">We, </string>
    <string name="thursday">Th, </string>
    <string name="friday">Fr, </string>
    <string name="saturday">Sa, </string>
    <string name="sunday">Su, </string>
    <string name="mondayLong">Monday</string>
    <string name="tuesdayLong">Tuesday</string>
    <string name="wednesdayLong">Wednesday</string>
    <string name="thursdayLong">Thursday</string>
    <string name="fridayLong">Friday</string>
    <string name="saturdayLong">Saturday</string>
    <string name="sundayLong">Sunday</string>
    <string name="flexiTimeDayDescription">check if you work on this day</string>
    <string name="total">Total</string>
    <string name="task">Task</string>
    <string name="text">Text</string>
    <string name="choose_task">Choose a task</string>
    <string name="clockIn">Start Tracking</string>
    <string name="clockInChange">Start New Period</string>
    <string name="clockOut">Stop Tracking</string>
    <string name="insert_default_times">Multi-Insert</string>
    <string name="edit_tasks">Edit Tasks</string>
    <string name="edit_events">Edit Events</string>
    <string name="options">Options</string>
    <string name="new_task">New Task</string>
    <string name="new_event">New Event</string>
    <string name="enter_new_task_name">Enter the new task name:</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="rename_task">Rename Task</string>
    <string name="edit_event">Edit Event</string>
    <string name="delete_task">Delete Task</string>
    <string name="delete_event">Delete Event</string>
    <string name="toggle_activation_state_of_task">Toggle Activation State</string>
    <string name="toggle_default">Toggle Default</string>
    <string name="really_enable_task">Really enable the task?</string>
    <string name="really_disable_task">Really disable the task?</string>
    <string name="really_delete_task">Really delete the task?</string>
    <string name="cannot_delete_task">The task cannot be deleted because it is still used in events.</string>
    <string name="really_delete_event">Really delete the event?</string>
    <string name="enableFlexiTime">Enable Flexi Time</string>
    <string name="flexiTimeBalancing">Flexi Time Balancing</string>
    <string name="preferences">Options</string>
    <string name="message">Message</string>
    <string name="shortDateFormat">DD.MM.</string>
    <string name="flexiTimeToZeroOnEveryDay">countdown to 0:00 every day</string>
    <string name="flexiTimeToZeroOnEveryDayDescription">only on last working day if disabled</string>
    <string name="flexiTimeStartValue">Start Value for Flexi Time</string>
    <string name="flexiTimeStartValueDescription">in hours:minutes, e.g. 10:45</string>
    <string name="smallestTimeUnit">Smallest Time Unit</string>
    <string name="smallestTimeUnitDescription">in minutes, e.g. 15 - flattening rounds to this amount of time (has to be a divisor of 60)</string>
    <string name="backward">jumped backward</string>
    <string name="forward">jumped forward</string>
    <string name="weeks">weeks</string>
    <string name="now">now</string>
    <string name="locationBasedTracking">Location-based Tracking</string>
    <string name="enableLocationBasedTracking">Track by Location</string>
    <string name="workplaceLatitude">Latitude of Workplace</string>
    <string name="workplaceLongitude">Longitude of Workplace</string>
    <string name="workplaceLatitudeLongitudeDescription">in degrees, e.g. 44.2</string>
    <string name="trackingTolerance">Tolerance</string>
    <string name="trackingToleranceDescription">in whole meters, e.g. 500</string>
    <string name="wifiBasedTracking">WiFi-based Tracking</string>
    <string name="enableWifiBasedTracking">Track by WiFi</string>
    <string name="enableWifiBasedTrackingDescription">will only be active if wi-fi radio is enabled</string>
    <string name="workplaceWifiSSID">SSID at Workplace</string>
    <string name="workplaceWifiSSIDDescription">name of a visible wi-fi SSID - you don\'t need to be connected</string>
    <string name="wifiBasedTrackingVibrate">Vibrate on Events</string>
    <string name="ignoreBefore">Ignore before events</string>
    <string name="ignoreAfter">Ignore after events</string>
    <string name="ignoreBeforeAfterDescription">in minutes, e.g. 10</string>
    <string name="flexiTimeTarget">Flexi Time Target</string>
    <string name="flexiTimeTargetDescription">in hours:minutes per week, e.g. 38:30</string>
    <string name="locationBasedTrackingVibrate">Vibrate on Events</string>
    <string name="autoPause">Automatic Pause</string>
    <string name="autoPauseEnabled">Enable Automatic Pause</string>
    <string name="autoPauseBegin">Begin of Automatic Pause</string>
    <string name="autoPauseBeginDescription">in 24 hour time, e.g. 12.30</string>
    <string name="autoPauseEnd">End of Automatic Pause</string>
    <string name="autoPauseEndDescription">in 24 hour time, e.g. 13.30</string>
    <string name="flatteningEnabled">Enable Time Flattening</string>
    <string name="type">Type</string>
    <string name="time">Time</string>
    <string name="saveChanges">Save Changes</string>
    <string name="optional">(optional)</string>
    <string name="notification">Notification</string>
    <string name="notificationEnabled">Notification enabled</string>
    <string name="notificationDescription">only shown when clocked in</string>
    <string name="timeAheadTitle">File an event in advance</string>
    <string name="timeAheadIntro">File an event of the type</string>
    <string name="timeAheadOutro">in advance for in</string>
    <string name="ten">10</string>
    <string name="minutes">minutes</string>
    <string name="longClickHint">(long click to schedule an event)</string>
    <string name="availableActions">Available Actions</string>
    <string name="logo">Logo</string>
    <string name="about">About</string>
    <string name="use_current_location">Here = Work</string>
    <string name="really_use_current_location">Do you want to use your current location as work place? The work place coordinates you may have entered before will be overwritten! (It could take some seconds to find out your current location.)</string>
    <string name="timeRange">Time Range</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="previous">&lt; prev</string>
    <string name="next">next ></string>
	<string name="today">today</string>
    <string name="customize">Customize</string>
    <string name="reports">Reports</string>
    <string name="backup_on_google_servers">Do you want to activate backup on Google servers? This setting can be changed anytime under options.</string>
    <string name="backup">Data Backup</string>
    <string name="backup_to_google">Backup to Google Servers</string>
    <string name="backup_enabled">Backup enabled</string>
    <string name="lastModifiedTimestamp">Data Last Modified:</string>
    <string name="lastBackupTimestamp">Last Backup:</string>
    <string name="restore">Data Restore</string>
    <string name="backup_failed">Backup failed.</string>
    <string name="restore_failed">Restore failed.</string>
    <string name="restore_failed_file_not_found">Restore failed, file not found.</string>
    <string name="backup_overwrite">Overwrite existing file \"%1$s\"?</string>
    <string name="restore_warning">Delete everything and replace it with the content of the restore file \"%1$s\"?</string>
    <string name="please_wait">Please wait&#8230;</string>
    <string name="current">current</string>
    <string name="last">last</string>
    <string name="week">week</string>
    <string name="month">month</string>
    <string name="year">year</string>
    <string name="last_and_current">last + current</string>
    <string name="eventsReport">All Events</string>
    <string name="timesByTaskReport">Times by Task</string>
    <string name="chooseReport">Choose Report</string>
    <string name="timesByTaskPerWeek">Times by Task (weekly)</string>
    <string name="timesByTaskPerMonth">Times by Task (monthly)</string>
    <string name="notificationUsesFlexiTimeAsTarget">use flexi time 0:00 as target</string>
    <string name="notificationFlexiTimeDescription">reduce weekly target by flexi overtime</string>
    <string name="automaticTracking">Automatic Tracking</string>
    <string name="methodsGenerateEventsSeparately">Handle methods separately</string>
    <string name="methodsGenerateEventsSeparatelyDescription">if enabled, every tracking method (location, wifi) generates separate events - if disabled, only first clock-in and last clock-out counts</string>
    
</resources>
