<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:scrollbars="none" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:baselineAligned="false"
            android:orientation="horizontal" >

            <RadioGroup
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:orientation="vertical" >

                <RadioButton
                    android:id="@+id/rangeLast"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/last" />

                <RadioButton
                    android:id="@+id/rangeCurrent"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/current" />

                <RadioButton
                    android:id="@+id/rangeLastAndCurrent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/last_and_current"/>

                <RadioButton
                    android:id="@+id/rangeAllData"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/allData"/>
            </RadioGroup>

            <RadioGroup
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/unitWeek"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/week"/>

                <RadioButton
                    android:id="@+id/unitMonth"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/month"/>

                <RadioButton
                    android:id="@+id/unitYear"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/year"/>
            </RadioGroup>
        </LinearLayout>

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/chooseReport"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Button
            android:id="@+id/allEventsButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/eventsReport" />

        <Button
            android:id="@+id/timesByTaskButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/timesByTaskReport" />

        <Button
            android:id="@+id/timesByTaskPerDay"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/timesByTaskPerDay" />

        <Button
            android:id="@+id/timesByTaskPerWeek"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/timesByTaskPerWeek" />

        <Button
            android:id="@+id/timesByTaskPerMonth"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/timesByTaskPerMonth" />

    </LinearLayout>

</ScrollView>